syntax = "proto3";

import "google/protobuf/empty.proto";
package main;

option go_package = "github.com/sebasttiano/Blackbird/internal/proto";

message CounterMetric {
  int64 id = 1;
  string name = 2;
  int64 value = 3;
}

message GaugeMetric {
  int64 id = 1;
  string name = 2;
  double value = 3;
}

message GetMetricRequest {
  enum Type {
    CounterMetric = 0;
    GaugeMetric = 1;
  }
  Type type = 1;
}

message GetMetricResponse {
  string value = 1;
  string error = 2;
}


message UpdateMetricRequest {
  enum Type {
    CounterMetric = 0;
    GaugeMetric = 1;
  }
  Type type = 1;

}
message UpdateMetricResponse {
  string error = 1;
}

message UpdateMetricsRequest {
  enum Type {
    CounterMetric = 0;
    GaugeMetric = 1;
  }
  repeated Type type = 1;
}

message ListMetricsResponse {
  repeated CounterMetric counters = 1;
  repeated GaugeMetric gauges = 2;
  string error = 3;
}

service Metrics {
  rpc GetMetric(GetMetricRequest) returns (GetMetricResponse);
  rpc UpdateMetric(UpdateMetricRequest) returns (UpdateMetricResponse);
  rpc UpdateMetrics(UpdateMetricsRequest) returns (UpdateMetricResponse);
  rpc ListAllMetrics(google.protobuf.Empty) returns (ListMetricsResponse);
}


